--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,9 @@ jobs:
       run: |
         image_id=ghcr.io/${{ github.repository_owner }}/$image_name
         image_id=$(echo $image_id | tr '[A-Z]' '[a-z]')
-        latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-        latest_tag=$(echo $latest_tag | sed -e 's/^v//')
         echo image_id=$image_id
-        echo latest_tag=$latest_tag
-        echo "version=$latest_tag" >> $GITHUB_OUTPUT
-        docker tag $image_name $image_id:$latest_tag
-        docker push $image_id:$latest_tag
+        docker tag $image_name $image_id:latest
+        docker push $image_id:latest
   tagging:
     needs: [build]
     name: 🏷️ Tagging the app
